--- a/README/1.3.3.md
+++ b/README/1.3.3.md
@@ -1,5 +1,5 @@
 ### uniCloud 云函数路由研究群:22466457 如有问题或建议可以在群内讨论。
-### gitee公共仓库地址：
+### gitee公共仓库地址：https://gitee.com/vk-uni/vk-uni-cloud-router.git
 ##  更新内容
 #### 1、【新增】登录/注册/密码找回页面模板(前后端一体模板)
 #### 2、【新增】用户登录日志
