--- a/README/1.3.4.md
+++ b/README/1.3.4.md
@@ -4,5 +4,7 @@
 ##### 1、【优化】将演示页面移至分包`pages_template`目录中，不占用主包大小。
 ##### 2、【优化】为了方便新手快速上手此框架，写一个简单的演示页面（`pages/test/test`）
 ###### 为了符合uniapp官方规范，你自己写的页面均写在`pages`目录下 故此`pages/test/test`页面未移至`pages_template`目录
+##### 3、【新增】登录/注册/找回密码模板中的发送验证码组件`vk-u-verification-code`。
+##### 注意:若提示找不到`vk-u-verification-code`组件,请删除`node_modules`目录重新`npm i vk-unicloud-page`
 
 ### 你也可以在评论区发布留言交流心得。
