--- a/README/1.2/1.2.3.md
+++ b/README/1.2/1.2.3.md
@@ -63,7 +63,7 @@ res.item = await vk.baseDao.findByWhereJson({
 // 分页查询多条数据 sql: select * from vk-test where money >= 0 limit 0,20;
 let res = await vk.baseDao.select({
 	dbName:"vk-test", // 表名
-	pageKey:true, // 是否分页
+	getCount:true, // 是否同时返回总数(会执行count)
 	pageIndex:1, // 当前第几页
 	pageSize:20, // 每页条数
 	whereJson:{ // 条件
@@ -95,7 +95,7 @@ let res = await vk.baseDao.select2({
 	foreignKey:"kehuid", // 主表用于和副表连接的外键字段名
 	foreignKey2:"_id", // 副表用于和主表连接的外键字段名
 	as:"kehuInfo", // 副表信息插入到主表里的字段名称,如果输入记录中本来就已有该字段，则该字段会被覆写
-	pageKey:true, // 是否分页
+	getCount:true, // 是否同时返回总数(会执行count)
 	pageIndex:1, // 当前第几页
 	pageSize:10, // 每页显示数量
 	whereJson:{ // 主表筛选条件
