--- a/README/1.3/1.3.2.md
+++ b/README/1.3/1.3.2.md
@@ -13,7 +13,7 @@ let res = await vk.baseDao.select2({
 	foreignKey:"kehuid",              // 主表外键字段名
 	foreignKey2:"_id",                // 副表外键字段名
 	as:"kehuInfo",                    // 副表数据插入到主表的字段名
-	pageKey:true,                     // 是否分页(会返回count和hasMore)
+	getCount:true,                    // 是否同时返回总数(会执行count)
 	pageIndex:1,                      // 当前第几页
 	pageSize:10,                      // 每页显示数据
 	whereJson:{                       // 主表where条件
@@ -61,7 +61,7 @@ let res = await vk.baseDao.select2({
 	foreignKey:"_id",                 // 主表外键字段名
 	foreignKey2:"kehuid",             // 副表外键字段名
 	as:"kehuInfo",                    // 副表数据插入到主表的字段名
-	pageKey:true,                     // 是否分页(会返回count和hasMore)
+	getCount:true,                    // 是否同时返回总数(会执行count)
 	pageIndex:1,                      // 当前第几页
 	pageSize:10,                      // 每页显示数据
 	fieldJson:{                       // 主表字段显示规则
