--- a/使用帮助/5、配置自定义过滤器.md
+++ b/使用帮助/5、配置自定义过滤器.md
@@ -1,6 +1,9 @@
 ### 什么是过滤器?
 #### 过滤器可以在业务云函数执行之前（或之后），统一拦截，进行过滤后再放行。
-##### 示例代码在目录`router/middleware/modules/` 下
+
+## 重要提示
+##### 【重要】示例代码在目录`router/middleware/modules/` 下
+
 ### 我用自定义过滤器可以做什么?
 ##### 自定义过滤器使用场景1 - 电商多店店铺管理系统后台
 ```
