--- a/使用帮助/1、快速上手 - 安装步骤.md
+++ b/使用帮助/1、快速上手 - 安装步骤.md
@@ -1,7 +1,8 @@
 
 # 快速上手
+
 ## 后端（云函数端）安装步骤
-打开 `cloudfunctions` 目录
+打开 `uniCloud/cloudfunctions` 目录
 
 ### 前置工作：修改云函数全局配置文件（用到微信登录的必须要配置）
 #### 注意：
@@ -12,51 +13,81 @@
 3、Node.js 安装包及源码下载地址为：https://nodejs.org/en/download/
 4、Node.js 安装教程：https://www.runoob.com/nodejs/nodejs-install-setup.html
 ```
+
 ### 正式安装
-```
-1、修改完配置文件后上传common目录下的公共模块
-1.1、右键common下的uni-id目录，点击上传公共模块
-1.2、右键common下的config目录，点击上传公共模块
-1.3、右键common下的vk-unicloud目录，点击上传公共模块
+
+```js
+1、修改完配置文件后上传 `uniCloud/cloudfunctions/common` 目录下的公共模块
+1.1、右键 common 下的 config 目录，点击上传公共模块
+1.2、右键 common 下的 uni-id 目录，点击上传公共模块
+1.3、右键 common 下的 uni-pay 目录，点击上传公共模块
+1.4、右键 common 下的 vk-unicloud 目录，点击上传公共模块
 ```
 
 ```js
 2、router安装公共模块
-在router目录执行命令 （右键router目录，使用命令行窗口打开所在目录），输入
+在 `uniCloud/cloudfunctions/router` 目录执行命令 （右键router目录，使用命令行窗口打开所在目录）
+输入 `npm i` （若执行失败，则再执行一次）
 
-npm i （若执行失败，则再执行一次）
-
-或 分别输入
-2.1、npm i ../common/uni-id（若执行失败，则再执行一次）
-2.2、npm i ../common/config（若执行失败，则再执行一次）
-2.3、npm i ../common/vk-unicloud（若执行失败，则再执行一次）
 ```
 
 ```js
-3、上传云函数router（右键router目录，上传部署）
+3、上传云函数 `router`（右键router目录，上传部署）
 ```
 
 ```js
-4、初始化云数据库db_init.json（右键db_init.json文件，初始化云数据库）
+4、初始化云数据库 `database/db_init.json`（右键db_init.json文件，初始化云数据库）
 ```
-
-
 
 ## 前端（页面端）安装步骤
-在你的项目根目录执行npm命令
 
-1. `npm`方式安装
-```js
-npm i vk-unicloud-page   （若提示失败，再执行一次该命令即可）
-```
+`main.js` 引入 `vk-unicloud-page` 库
 
-2. `main.js`引入vk-unicloud-page库
 ```js
 // main.js
-import vk from 'vk-unicloud-page';
+import vk from 'uni_modules/vk-unicloud';
 Vue.use(vk);
 ```
 
+完整 `main.js` 示例
+
+```js
+import Vue from 'vue'
+import App from './App'
+import store from './store'
+import config from '@/app.config.js'
+
+// 引入 uView UI
+import uView from 'uview-ui';
+Vue.use(uView);
+
+// 引入 vk框架前端
+import vk from 'uni_modules/vk-unicloud/vk_modules/vk-unicloud-page';
+Vue.use(vk);
+
+// 引入 vk框架 提供的对 vuex 的简写法则
+import storeUtil from './store/lib/index'
+
+// 初始化 vk框架
+Vue.prototype.vk.init({
+  Vue,               // Vue实例
+  config,	           // 配置
+  store : storeUtil, // vuex简写法则
+});
+
+Vue.config.productionTip = false
+
+App.mpType = 'app'
+
+const app = new Vue({
+  store,
+  ...App
+});
+app.$mount();
+
+```
+
+#### 如有疑问，请加群：22466457 关于插件的问题包教包会！
 
 ### `动态组件` 依赖 `uview-ui` 
 ### 集成 `uview-ui` 安装步骤开始 （若不想集成`uview-ui`可跳过此处）
@@ -94,14 +125,13 @@ Vue.use(uView);
 ```js
 // pages.json
 {
-	"easycom": {
-		"^u-(.*)": "uview-ui/components/u-$1/u-$1.vue",
-		"^vk-u-(.*)": "vk-unicloud-dynamic-components/components/vk-u-$1/vk-u-$1.vue"
-	},
-	// 此为本身已有的内容
-	"pages": [
-		// ......
-	]
+  "easycom": {
+    "^u-(.*)": "uview-ui/components/u-$1/u-$1.vue"
+  },
+  // 此为本身已有的内容
+  "pages": [
+    // ......
+  ]
 }
 ```
 
