--- a/使用帮助/6、1.8以下版本升级至1.8升级指南.md
+++ b/使用帮助/6、1.8以下版本升级至1.8升级指南.md
@@ -1,23 +1,22 @@
-### 1.8以下版本升级至1.8升级指南 升级成 uni_modules版本
+## 【重要】目前uni的插件市场有问题，无法直接从插件市场下载1.8版本示例项目，uni官方正在处理中，估计需要一段时间修复。
 
-### 若您是框架新用户，则直接下载最新框架示例项目进行开发即可。无需进行下面的操作。
+### 目前临时的升级框架方式：
 
-### 1.8升级步骤
-### 先升级HBX编译器至 `3.1.2` 或更新的版本
+### 1、 已升级到1.8以上版本后的升级方式
 
-### 由于文件改动较大，故请直接下载1.8.0示例项目，再将您的项目移植到示例项目中。
-#### `升级成功后，后面更新版本只需要在hbx编译器中一键更新，再也不用担心框架更新问题。`
+![](https://vkceyugu.cdn.bspapp.com/VKCEYUGU-cf0c5e69-620c-4f3c-84ab-f4619262939f/c72fa719-9444-4874-93a5-7b09d440feee.jpg)
 
-#### 1、 进入插件市场，下载最新框架示例项目 
-#### 框架下载地址：`https://ext.dcloud.net.cn/plugin?id=2204` [点击前往](https://ext.dcloud.net.cn/plugin?id=2204)
+### 2、 1.8以下版本的升级方式
 
+#### 先升级HBX编译器至 `3.1.2` 或更新的版本
+#### 1、通过gitee导入最新版本 [前往gitee](https://gitee.com/vk-uni/vk-uni-cloud-router.git)
 #### 2、将您之前的项目的`pages` `pages.json` 等您的业务文件复制到最新框架项目中
+```js
+需要删除pages.json中的 easycom 下的"^vk-u(.*)" 这一整行
+```
 #### 3、将您之前的项目的`router`目录下
 #### 除了 `router/service/user` 、 `router/service/template` 两个目录
 #### 和`router/middleware/returnUserInfoFilter`文件
 #### 外的其他目录替换成你之前项目的文件
-
-### 后续升级只需要点击更新即可一键升级框架
-![](https://vkceyugu.cdn.bspapp.com/VKCEYUGU-cf0c5e69-620c-4f3c-84ab-f4619262939f/c72fa719-9444-4874-93a5-7b09d440feee.jpg)
 
 ### 如升级过程中遇到问题，请加群：22466457 你的问题可在群内解决。
