--- a/使用帮助/6、1.8以下版本升级至1.8升级指南.md
+++ b/使用帮助/6、1.8以下版本升级至1.8升级指南.md
@@ -10,11 +10,11 @@
 
 #### 先升级HBX编译器至 `3.1.2` 或更新的版本
 #### 1、通过gitee导入最新版本 [前往gitee](https://gitee.com/vk-uni/vk-uni-cloud-router.git)
-#### 2、将您之前的项目的`pages` `pages.json` 等您的业务文件复制到最新框架项目中
+#### 2、将你之前的项目的`pages` `pages.json` 等你的业务文件复制到最新框架项目中
 ```js
 需要删除pages.json中的 easycom 下的"^vk-u(.*)" 这一整行
 ```
-#### 3、将您之前的项目的`router`目录下
+#### 3、将你之前的项目的`router`目录下
 #### 除了 `router/service/user` 、 `router/service/template` 两个目录
 #### 和`router/middleware/returnUserInfoFilter`文件
 #### 外的其他目录替换成你之前项目的文件
