--- a/使用帮助/1、快速上手 - 安装步骤.md
+++ b/使用帮助/1、快速上手 - 安装步骤.md
@@ -19,9 +19,10 @@
 ```js
 1、修改完配置文件后上传 `uniCloud/cloudfunctions/common` 目录下的公共模块
 1.1、右键 common 下的 config 目录，点击上传公共模块
-1.2、右键 common 下的 uni-id 目录，点击上传公共模块
-1.3、右键 common 下的 uni-pay 目录，点击上传公共模块
-1.4、右键 common 下的 vk-unicloud 目录，点击上传公共模块
+1.2、右键 common 下的 uni-config-center目录，点击上传公共模块
+1.3、右键 common 下的 uni-id 目录，点击上传公共模块
+1.4、右键 common 下的 uni-pay 目录，点击上传公共模块
+1.5、右键 common 下的 vk-unicloud 目录，点击上传公共模块
 ```
 
 ```js
@@ -37,6 +38,20 @@
 
 ```js
 4、初始化云数据库 `database/db_init.json`（右键db_init.json文件，初始化云数据库）
+```
+
+```js
+注意：第二步的前提是 `router/package.json`内的 `dependencies`内容如下
+{
+  "dependencies": {
+    "config": "file:../common/config",
+    "uni-config-center": "file:../../../uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center",
+    "uni-id": "file:../../../uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id",
+    "uni-pay": "file:../../../uni_modules/uni-pay/uniCloud/cloudfunctions/common/uni-pay",
+    "vk-unicloud": "file:../../../uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud"
+  }
+}
+
 ```
 
 ## 前端（页面端）安装步骤
@@ -65,14 +80,11 @@ Vue.use(uView);
 import vk from 'uni_modules/vk-unicloud/vk_modules/vk-unicloud-page';
 Vue.use(vk);
 
-// 引入 vk框架 提供的对 vuex 的简写法则
-import storeUtil from './store/lib/index'
 
 // 初始化 vk框架
 Vue.prototype.vk.init({
   Vue,               // Vue实例
-  config,	           // 配置
-  store : storeUtil, // vuex简写法则
+  config,	     // 全局配置
 });
 
 Vue.config.productionTip = false
