--- a/uniCloud-aliyun/cloudfunctions/router/service/plugs/插件.md
+++ b/uniCloud-aliyun/cloudfunctions/router/service/plugs/插件.md
@@ -5,7 +5,11 @@
 ```
 .
 ├── plugs──────────────────────# 插件逻辑
-│ └── admin───────────────────# admin端
-│ └── client──────────────────# client端
+│ └── plugs-A───────────────────# 插件A
+│ ────└── admin───────────────────# 插件A admin端
+│ ────└── client──────────────────# 插件A client端
+│ └── plugs-B───────────────────# 插件B
+│ ────└── admin───────────────────# 插件B admin端
+│ ────└── client──────────────────# 插件B client端
 └─────────────────────────────────
 ```
