--- a/使用帮助/2、云函数框架目录结构.md
+++ b/使用帮助/2、云函数框架目录结构.md
@@ -60,12 +60,12 @@
 │ ── └── sys──────────────────# sys函数为后端管理人员才能访问的函数(商家后台工作人员)
 │ ── └── util─────────────────# 统一用户中心服务专用的工具包
 │ └── plugs───────────────# 插件逻辑（插件专用）（会陆续新增一些实用性插件给开发者使用，如微信小程序发送订阅消息等等）
-│ ── └── admin────────────────# 管理端类型插件
-│ ──── └── 插件A──────────────────# 插件A
-│ ──── └── 插件B──────────────────# 插件B
-│ ── └── client───────────────# 客户端类型插件
-│ ──── └── 插件A──────────────────# 插件A
-│ ──── └── 插件B──────────────────# 插件B
+│ ──└── plugs-A───────────────────# 插件A
+│ ────└── admin───────────────────# 插件A admin端
+│ ────└── client──────────────────# 插件A client端
+│ ──└── plugs-B───────────────────# 插件B
+│ ────└── admin───────────────────# 插件B admin端
+│ ────└── client──────────────────# 插件B client端
 │ └── template─────────────# 云函数模板（插件内的云函数写法模板）
 │ ── └── db_api───────────────# 数据库接口调用模板
 │ └── muban.js─────────────# 云函数模板（新建一个云函数应复制粘贴这个文件）
