--- a/使用帮助/5、配置自定义过滤器.md
+++ b/使用帮助/5、配置自定义过滤器.md
@@ -24,6 +24,49 @@
 |   kh    | /kh/     |   200   |  用户token过滤器，检测用户是否已登录  |
 |   sys   | /sys/    |   300   |  云函数层的权限过滤器，检测用户是否有此业务云函数的执行权限  |
 
+
+### 自定义过滤器代码示例
+
+```js
+/**
+ * 店铺权限过滤器示例
+ */
+module.exports = [
+  {
+    id: "shopManage",
+    regExp: "^client/shop/manage/(.*)",
+    description: "店铺操作接口需要检测用户是否有权限",
+    index: 210,// 此处必须>200 因为检测用户是否登录的过滤器的index是200（越小越先执行）
+    // mode 可选 onActionExecuting（云函数执行之前过滤）onActionExecuted（云函数执行之后过滤）
+    mode:"onActionExecuting", 
+    enable:true, // 通过设置enable=false可以关闭该中间件
+    main: async function(event) {
+      let { util, filterResponse } = event;
+      let { vk , db, _ } = util;
+      let { userInfo = {} } = filterResponse; // 此处的 userInfo 是 kh 过滤器传过来的（kh的index是200）
+      let { role = [] } = userInfo;
+      let res = { code : 0, msg : 'ok' };
+      // 用户没有shopManage角色则拦截。（拦截后后面的云函数将不会运行，达到了简单的权限控制效果）
+      if(role.indexOf("shopManage") === -1){
+        return { code : -1, msg : '无权限' };
+      }
+      return res;
+    }
+  }
+]
+
+
+```
+### 过滤器可以有很多种用途，权限判断只是其中一种用途，还可以
+```js
+1、权限校验
+2、统一对对外的接口进行加密、解密
+3、写日志
+4、对请求参数进行过滤处理
+5、对返回给前端的数据进行过滤处理
+6、等等
+```
+
 ### 如何在业务函数获得过滤器传给业务函数的数据？
 
 ```js
@@ -39,7 +82,7 @@ module.exports = {
      */
     let res = {
       code: 0,
-      msg: ''，
+      msg: '',
       shopInfo : filterResponse.shopInfo,
       userInfo : filterResponse.userInfo 
     };
@@ -49,3 +92,6 @@ module.exports = {
   }
 }
 ```
+
+
+
