--- a/使用帮助/6、1.8以下版本升级至1.8升级指南.md
+++ b/使用帮助/6、1.8以下版本升级至1.8升级指南.md
@@ -1,15 +1,35 @@
-## 【重要】目前uni的插件市场有问题，无法直接从插件市场下载1.8版本示例项目，uni官方正在处理中，估计需要一段时间修复。
+## 【重要】目前uni的插件市场问题已修复，新项目可以直接导入插件创建。（需要先升级hbx到3.1.6）
 
-### 目前临时的升级框架方式：
+### 目前升级框架方式：
 
 ### 1、 已升级到1.8以上版本后的升级方式
 
+### 方式一: 升级整个框架(包含模块) HBX编译器版本需 `3.1.4`或更高
+![输入图片说明](https://images.gitee.com/uploads/images/2021/0309/100151_a7d81e18_541115.png "插件更新方法.png")
+
+#### 注意事项：使用方式一更新框架是最方便的，但是如果你改动了框架内置的部分代码，你改动过的代码可能会被还原，因此如果你改动过框架内置代码，合并的时候，可以先看下改动的文件。
+```js
+如：
+1、app.config.js
+2、App.vue
+3、main.js
+4、pages.json
+等等
+升级前一定要进行文件对比！
+```
+
+### 方式二: 只升级模块
+
 ![](https://vkceyugu.cdn.bspapp.com/VKCEYUGU-cf0c5e69-620c-4f3c-84ab-f4619262939f/c72fa719-9444-4874-93a5-7b09d440feee.jpg)
 
-### 2、 1.8以下版本的升级方式
+### 注意：
+#### 更新 `vk-unicloud` 后,需要在 `common/vk-unicloud` 右键上传公共模块才会生效
+#### 若是本地调试模式，则需要重启本地服务才会生效。
+#### 注意事项：使用方式二更新框架不会造成你修改过的框架文件被覆盖，但是如果本次更新需要改动框架内一些文件，则需要你手动更改。
 
-#### 先升级HBX编译器至 `3.1.2` 或更新的版本
-#### 1、通过gitee导入最新版本 [前往gitee](https://gitee.com/vk-uni/vk-uni-cloud-router.git)
+### 2、 1.8以下版本的升级方式
+#### 先升级HBX编译器至 `3.1.4` 或更新的版本
+#### 1、直接导入插件市场最新版项目模板 https://ext.dcloud.net.cn/plugin?id=2204
 #### 2、将你之前的项目的`pages` `pages.json` 等你的业务文件复制到最新框架项目中
 ```js
 需要删除pages.json中的 easycom 下的"^vk-u(.*)" 这一整行
