--- a/uniCloud-aliyun/cloudfunctions/router/service/逻辑层目录说明.md
+++ b/uniCloud-aliyun/cloudfunctions/router/service/逻辑层目录说明.md
@@ -5,7 +5,7 @@
 ```
 .
 ├── service──────────────────────# 逻辑层（用于写业务逻辑）
-│ └── admin────────────────# 后台管理端逻辑（admin框架开发中。。。）
+│ └── admin────────────────# PC后台管理端逻辑（admin框架开发中。。。）
 │ ── └── xxxxxxxxxxxxxxx──────# 
 │ ── └── xxxxxxxxxxxxxxx──────# 
 │ ── └── xxxxxxxxxxxxxxx──────# 
