--- a/使用帮助/9、数据库操作常见问题.md
+++ b/使用帮助/9、数据库操作常见问题.md
@@ -64,10 +64,10 @@ whereJson: _.and([
 ```
 ### in （包含其中） `nin`（都不包含）
 ```js
-// num in(1,2,3) 等价于 num = 1 or num = 2 or num = 3
-num : _.in([1,2,3])
-// num nin(1,2,3) 等价于 num != 1 and num !== 2 and num != 3
-num : _.nin([1,2,3])
+// 等价于 _id = "1" or _id = "2" or _id =  "3"
+_id : _.in(["1","2","3"])
+// 等价于 _id != "1" and _id !== "2" and _id != "3"
+_id : _.nin(["1","2","3"])
 
 ```
 
@@ -76,6 +76,20 @@ num : _.nin([1,2,3])
 // num != 1
 num : _.neq(1)
 
+
+```
+
+### 如获取今日注册的用户列表
+```js
+let { todayStart, todayEnd } = vk.pubfn.getCommonTime();
+let selectRes = await vk.baseDao.select({
+  dbName:"uni-id-users",
+  pageIndex:1,
+  pageSize:20,
+  whereJson:{
+    register_date : _.gte(todayStart).lte(todayEnd)  
+  }
+});
 
 ```
 
