--- a/使用帮助/6、常见问题/7、关于用户角色权限.md
+++ b/使用帮助/6、常见问题/7、关于用户角色权限.md
@@ -25,7 +25,7 @@
 
 #### 以上为用户角色权限校验的大致逻辑（因为非常灵活配置，可以适用于所有系统：admin后台，ERP软件，APP、小程序等）
 
-#### 但是如果你只想要在小程序客户端（非admin端）增加一个权限控制，且角色不多，如只有3个角色（商家，用户，骑手），且权限规则基本固定，则我们可以使用更简便高效的方法。 
+### 但是：如果你只想要在小程序客户端（非admin端）增加一个权限控制，且角色不多，如只有3个角色（商家，用户，骑手），且权限规则基本固定，则我们可以使用更简便高效的方法。 
 #### 商家特殊权限：查看自己店铺订单，发货等
 #### 骑手特殊权限：接单，查看自己接到的订单等
 #### 用户特殊权限：无
