--- a/使用帮助/5、后端（云函数）/4、中间件/1、中间件 - 过滤器.md
+++ b/使用帮助/5、后端（云函数）/4、中间件/1、中间件 - 过滤器.md
@@ -18,12 +18,33 @@
 自定义过滤器支持层级 越小越先执行
  ```
 #### 框架内置以下过滤器：(无需配置，已自动生效，编写同ID的过滤器可以覆盖内置过滤器）
-| 过滤器ID | 正则规则 |   层级   |     说明     |
-|---------|----------|-------- |---------------------------|
-|   pub   | /pub/    |   100   |  所有人都可以访问，不进行过滤    |
-|   kh    | /kh/     |   200   |  用户token过滤器，检测用户是否已登录  |
-|   sys   | /sys/    |   300   |  云函数层的权限过滤器，检测用户是否有此业务云函数的执行权限  |
+| 过滤器ID | 正则规则 |   层级  |         类型      |     说明                    |
+|---------|----------|--------| ----------------- |---------------------------|
+|   pub   | /pub/    |   100  | onActionExecuting |  所有人都可以访问，不进行过滤    |
+|   kh    | /kh/     |   200  | onActionExecuting |  用户token过滤器，检测用户是否已登录  |
+|   sys   | /sys/    |   300  | onActionExecuting |  云函数层的权限过滤器，检测用户是否有此业务云函数的执行权限  |
 
+
+#### 中间件参数说明
+
+| 参数             | 说明                           | 类型    | 默认值  | 可选值 |
+|------------------|-------------------------------|---------|--------|-------|
+| id           | 中间件ID，全局必须唯一，相同中间件ID会被覆盖 | String | - | - |
+| regExp       | 中间件的正则匹配规则(支持数组) | String Array  | 无 | -  |
+| description  | 中间的描述 | String  | - | -  |
+| index        | 中间件的执行顺序，值越小越先执行 | Number  | - | -  |
+| mode         | 中间件的模式，详情见下方 | String  | onActionExecuting | 见下方mode参数说明 |
+| enable       | 是否启动该中间件 | Boolean  | false | true |
+| main         | 执行的函数 | async function(event, serviceRes)   | - | -  |
+
+
+#### mode参数说明
+|         类型          | 说明                |
+|-----------------------|--------------------|
+|   onActionExecuting   | 在action执行前执行            |
+|   onActionExecuted    | 在action执行后执行            |
+|   onActionIntercepted | 在action被其他中间件拦截后执行 |
+|   onActionError       | 在action执行异常时执行        |
 
 ### 自定义过滤器代码示例
 
@@ -37,7 +58,6 @@ module.exports = [
     regExp: "^client/shop/manage/(.*)",
     description: "店铺操作接口需要检测用户是否有权限",
     index: 210,// 此处必须>200 因为检测用户是否登录的过滤器的index是200（越小越先执行）
-    // mode 可选 onActionExecuting（云函数执行之前过滤）onActionExecuted（云函数执行之后过滤）
     mode:"onActionExecuting", 
     enable:true, // 通过设置enable=false可以关闭该中间件
     main: async function(event) {
