--- a/使用帮助/5、后端（云函数）/2、数据库/4、查询返回树状结构.md
+++ b/使用帮助/5、后端（云函数）/2、数据库/4、查询返回树状结构.md
@@ -16,7 +16,7 @@ res = await vk.baseDao.selects({
     id: "menu_id",          // 唯一标识字段，默认为 _id
     parent_id: "parent_id", // 父级标识字段，默认为 parent_id
     children: "children",   // 自定义返回的下级字段名，默认为 children
-    level: 3,               // 查询返回的树的最大层级。超过设定层级的节点不会返回。默认10级，最大20，最小1
+    level: 3,               // 查询返回的树的最大层级。超过设定层级的节点不会返回。默认10级，最大15，最小1
     limit: 500,             // 每一级最大返回的数据。
     whereJson: {
       enable: true
@@ -24,4 +24,8 @@ res = await vk.baseDao.selects({
   }
 });
 ```
+### 注意：`treeProps`内的`whereJson` 若需要用到 `or` 和 `and` 则
+####  `_.or` 需写成` _.$.or`
+#### `_.and` 需写成` _.$.and`
 
+#### `foreignDB`属性需写在主表下，无需写在`treeProps`内。（字表会继承主表的`foreignDB`属性)
