--- a/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
+++ b/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
@@ -204,3 +204,20 @@ let selectRes = await vk.baseDao.select({
 });
 
 ```
+
+### 6、如何返回字段别名，如数据库中是`_id`,但想返回给前端是`user_id`
+```js
+let selectRes = await vk.baseDao.select({
+  dbName:"uni-id-users",
+  pageIndex:1,
+  pageSize:20,
+  fieldJson:{
+    user_id:"$_id",
+    nickname:true
+  },
+  whereJson:{
+    
+  }
+});
+
+```
