--- a/使用帮助/5、后端（云函数）/1、云函数/8、定时器（定时任务）.md
+++ b/使用帮助/5、后端（云函数）/1、云函数/8、定时器（定时任务）.md
@@ -1,7 +1,7 @@
 ## 定时器（定时任务）
 #### 以实现1小时自动请求一次指定的云函数为例
 
-### 1、编写 `client/timedTask/pub/autoCancelOrder`的云函数，写定时任务的业务逻辑。
+### 1、编写`client/timedTask/pub/autoCancelOrder`的云函数，写定时任务的业务逻辑。（没有则新建）
 ### 2、右键`cloudfunctions`目录 新建云函数，取名为`z_timer1`（名字任意，这里以`z_timer1`为定时器1号的名称）
 ### 3、复制定时器模板代码到`z_timer1`的`index.js`
 ```js
