--- a/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
+++ b/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
@@ -75,9 +75,37 @@ _id : _.nin(["1","2","3"])
 ```js
 // num != 1
 num : _.neq(1)
-
-
 ```
+
+### `gt`(大于）
+```js
+// num > 0
+num : _.gt(0)
+```
+
+### `gte`(大于等于）
+```js
+// num >= 0
+num : _.gte(0)
+```
+### `lt`(小于）
+```js
+// num < 0
+num : _.lt(0)
+```
+### `lte`(小于等于）
+```js
+// num <= 0
+num : _.lte(0)
+```
+
+### 组合使用
+```js
+// num >=0 and num <= 10
+num : _.gte(0).lte(10) 
+```
+
+
 
 ### 如获取今日注册的用户列表
 ```js
@@ -92,6 +120,9 @@ let selectRes = await vk.baseDao.select({
 });
 
 ```
+
+
+
 
 ### 2、如何控制只获取部分字段
 #### 只取 `username` 和 `nickname`
