--- a/使用帮助/1、快速上手 - 安装步骤.md
+++ b/使用帮助/1、快速上手 - 安装步骤.md
@@ -18,11 +18,10 @@
 
 ```js
 1、修改完配置文件后上传 `uniCloud/cloudfunctions/common` 目录下的公共模块
-1.1、右键 common 下的 config 目录，点击上传公共模块
-1.2、右键 common 下的 uni-config-center目录，点击上传公共模块
-1.3、右键 common 下的 uni-id 目录，点击上传公共模块
-1.4、右键 common 下的 uni-pay 目录，点击上传公共模块
-1.5、右键 common 下的 vk-unicloud 目录，点击上传公共模块
+1.1、右键 common 下的 uni-config-center目录，点击上传公共模块
+1.2、右键 common 下的 uni-id 目录，点击上传公共模块
+1.3、右键 common 下的 uni-pay 目录，点击上传公共模块
+1.4、右键 common 下的 vk-unicloud 目录，点击上传公共模块
 ```
 
 ```js
@@ -44,7 +43,6 @@
 注意：第二步的前提是 `router/package.json`内的 `dependencies`内容如下
 {
   "dependencies": {
-    "config": "file:../common/config",
     "uni-config-center": "file:../../../uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center",
     "uni-id": "file:../../../uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id",
     "uni-pay": "file:../../../uni_modules/uni-pay/uniCloud/cloudfunctions/common/uni-pay",
@@ -53,6 +51,8 @@
 }
 
 ```
+
+### 注意：如果提示 `createInstance is undefined` 则重新上传下`vk-unicloud`公共模块，并重启项目试试。
 
 ## 前端（页面端）安装步骤
 
