--- a/使用帮助/1、快速上手 - 安装步骤.md
+++ b/使用帮助/1、快速上手 - 安装步骤.md
@@ -15,7 +15,7 @@
 ```
 
 ### 正式安装
-
+##### 注意：不要使用右键`uniCloud`运行云服务空间初始化向导（hbx的这个功能有点问题）
 ```js
 1、修改完配置文件后上传 `uniCloud/cloudfunctions/common` 目录下的公共模块
 1.1、右键 common 下的 uni-config-center目录，点击上传公共模块
