--- a/使用帮助/1、快速上手 - 安装步骤.md
+++ b/使用帮助/1、快速上手 - 安装步骤.md
@@ -15,44 +15,7 @@
 ```
 
 ### 正式安装
-##### 注意：不要使用右键`uniCloud`运行云服务空间初始化向导（hbx的这个功能有点问题）
-```js
-1、修改完配置文件后上传 `uniCloud/cloudfunctions/common` 目录下的公共模块
-1.1、右键 common 下的 uni-config-center目录，点击上传公共模块
-1.2、右键 common 下的 uni-id 目录，点击上传公共模块
-1.3、右键 common 下的 uni-pay 目录，点击上传公共模块
-1.4、右键 common 下的 vk-unicloud 目录，点击上传公共模块
-```
-
-```js
-2、router安装公共模块
-在 `uniCloud/cloudfunctions/router` 目录执行命令 （右键router目录，使用命令行窗口打开所在目录）
-输入 `npm i` （若执行失败，则再执行一次）
-
-```
-
-```js
-3、上传云函数 `router`（右键router目录，上传部署）
-```
-
-```js
-4、初始化云数据库 `database/db_init.json`（右键db_init.json文件，初始化云数据库）
-```
-
-```js
-注意：第二步的前提是 `router/package.json`内的 `dependencies`内容如下
-{
-  "dependencies": {
-    "uni-config-center": "file:../../../uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center",
-    "uni-id": "file:../../../uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id",
-    "uni-pay": "file:../../../uni_modules/uni-pay/uniCloud/cloudfunctions/common/uni-pay",
-    "vk-unicloud": "file:../../../uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud"
-  }
-}
-
-```
-
-### 注意：如果提示 `createInstance is undefined` 则重新上传下`vk-unicloud`公共模块，并重启项目试试。
+### 直接右键`uniCloud`目录 点击 `运行云服务空间初始化向导` 即可
 
 ## 前端（页面端）安装步骤
 
