--- a/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
+++ b/使用帮助/5、后端（云函数）/2、数据库/8、数据库操作常见问题.md
@@ -1,6 +1,18 @@
 
 ## 数据库操作常见问题
 
+### 目录
+#### 1、[and、or、in、nin、neq用法](#and)
+#### 2、[大于小于](#大于小于)
+#### 3、[获取今日注册的用户列表](#如何获取今日注册的用户列表)
+#### 4、[控制只获取部分字段](#如何控制只获取部分字段)
+#### 5、[排序](#排序)
+#### 6、[模糊查询](#模糊查询)
+#### 7、[如判断字段是否存在](#如何判断字段是否存在)
+#### 8、[返回字段别名](#返回字段别名)
+#### 9、[查出表中字段a等于字段b的数据](#查出表中字段a等于字段b的数据)
+
+### and
 ### 1、`and` 、`or`、`in`、`nin`、`neq`的用法
 ### 针对同一个字段的 `and` 和 `or`
 ```js
@@ -77,6 +89,7 @@ _id : _.nin(["1","2","3"])
 num : _.neq(1)
 ```
 
+### 大于小于
 ### `gt`(大于）
 ```js
 // num > 0
@@ -107,7 +120,7 @@ num : _.gte(0).lte(10)
 
 
 
-### 如获取今日注册的用户列表
+### 如何获取今日注册的用户列表
 ```js
 let { todayStart, todayEnd } = vk.pubfn.getCommonTime();
 let selectRes = await vk.baseDao.select({
@@ -124,7 +137,7 @@ let selectRes = await vk.baseDao.select({
 
 
 
-### 2、如何控制只获取部分字段
+### 如何控制只获取部分字段
 #### 只取 `username` 和 `nickname`
 ```js
 let selectRes = await vk.baseDao.select({
@@ -151,7 +164,7 @@ let selectRes = await vk.baseDao.select({
 });
 ```
 
-### 3、排序
+### 排序
 #### 升序
 ```js
 // 按注册时间升序
@@ -187,7 +200,7 @@ let selectRes = await vk.baseDao.select({
 });
 ```
 
-### 4、模糊查询
+### 模糊查询
 #### 以`xxxx`开头
 ```js
 let selectRes = await vk.baseDao.select({
@@ -223,7 +236,7 @@ let selectRes = await vk.baseDao.select({
 });
 ```
 
-### 5、如何判断字段是否存在
+### 如何判断字段是否存在
 ```js
 let selectRes = await vk.baseDao.select({
   dbName:"uni-id-users",
@@ -236,7 +249,8 @@ let selectRes = await vk.baseDao.select({
 
 ```
 
-### 6、如何返回字段别名，如数据库中是`_id`,但想返回给前端是`user_id`
+### 返回字段别名
+### 如何返回字段别名，如数据库中是`_id`,但想返回给前端是`user_id`
 ```js
 let selectRes = await vk.baseDao.select({
   dbName:"uni-id-users",
@@ -249,6 +263,19 @@ let selectRes = await vk.baseDao.select({
   whereJson:{
     
   }
+});
+
+```
+
+### 查出表中字段a等于字段b的数据
+```js
+let selectRes = await vk.baseDao.select({
+  dbName:"表名",
+  pageIndex:1,
+  pageSize:20,
+  whereJson:_.expr(_.$.and([
+    _.$.eq(['$a', '$b'])
+  ]))
 });
 
 ```
