--- a/README/2.5/2.5.3.md
+++ b/README/2.5/2.5.3.md
@@ -1,5 +1,7 @@
-* 1、【修复】`vk.baseDao.adds` 无返回值的问题。
-* 2、【新增】
+* 1、【优化】`vk.pubfn.base64ToFile` 支持 APP 环境执行
+* 2、【优化】`vk.pubfn.fileToBase64` 支持 APP 环境执行
+* 3、【修复】`vk.baseDao.adds` 无返回值的问题。
+* 4、【修复】`vk.baseDao.selects` 当 `localKey` 为 `a.b.c` 这样的形式时会报错的问题。
 
 ##### 框架学习Q群：`22466457` 欢迎萌新和大佬来使用和共同改进框架
 
